--- a/css/index.css
+++ b/css/index.css
@@ -6,3 +6,7 @@ html, body {
     height: 100%;
     overflow-x: hidden; /* optional: prevents horizontal scroll */
 }
+
+.landDropdown{
+    font-size: clamp(16px, 2vw, 24px);
+}
